[gd_scene load_steps=10 format=3 uid="uid://cufev5lggoewn"]

[ext_resource type="Texture2D" uid="uid://bdqx77n4gvlx" path="res://bg-menu.png" id="1_v1486"]
[ext_resource type="Script" path="res://title_screen.gd" id="1_y3y1n"]
[ext_resource type="Texture2D" uid="uid://dfnq4cpusdgi0" path="res://tank-game-title.png" id="2_utm0x"]
[ext_resource type="FontFile" uid="uid://fy4as8fu8sms" path="res://DINAlternate-Bold.ttf" id="3_4pn3y"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xwf28"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4veel"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_knmus"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pfout"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_knoef"]
size = Vector2(680, 112.5)

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_y3y1n")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(960, 540)
texture = ExtResource("1_v1486")

[node name="OuterWall" type="StaticBody2D" parent="."]

[node name="ColorRect" type="ColorRect" parent="OuterWall"]
offset_right = 1920.0
offset_bottom = 30.0
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="ColorRect2" type="ColorRect" parent="OuterWall"]
offset_top = 1050.0
offset_right = 1920.0
offset_bottom = 1080.0
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="ColorRect3" type="ColorRect" parent="OuterWall"]
offset_left = 30.0
offset_right = 1110.0
offset_bottom = 30.0
rotation = 1.57086
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="ColorRect4" type="ColorRect" parent="OuterWall"]
offset_left = 1920.0
offset_right = 3000.0
offset_bottom = 30.0
rotation = 1.57086
color = Color(0.235294, 0.235294, 0.235294, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="OuterWall"]
position = Vector2(15, 540)
scale = Vector2(1.5, 54)
shape = SubResource("RectangleShape2D_xwf28")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="OuterWall"]
position = Vector2(1905, 540)
scale = Vector2(1.5, 54)
shape = SubResource("RectangleShape2D_4veel")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="OuterWall"]
position = Vector2(960, 15)
scale = Vector2(96, 1.5)
shape = SubResource("RectangleShape2D_knmus")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="OuterWall"]
position = Vector2(960, 1065)
scale = Vector2(96, 1.5)
shape = SubResource("RectangleShape2D_pfout")

[node name="Title" type="StaticBody2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="Title"]
position = Vector2(960, 540)
texture = ExtResource("2_utm0x")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Title"]
position = Vector2(960, 535.75)
shape = SubResource("RectangleShape2D_knoef")

[node name="P1Controls" type="Label" parent="."]
offset_left = 810.0
offset_top = 68.0
offset_right = 1111.0
offset_bottom = 158.0
theme_override_colors/font_color = Color(1, 0.313726, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_4pn3y")
theme_override_font_sizes/font_size = 48
text = "P1 CONTROLS:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Text" type="Label" parent="P1Controls"]
layout_mode = 0
offset_top = 90.0
offset_right = 301.0
offset_bottom = 186.0
theme_override_colors/font_color = Color(0.784314, 0.784314, 0.784314, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_4pn3y")
theme_override_font_sizes/font_size = 24
text = "WASD - Movement
ZX - Rotate turret
Left shift - Fire"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P2Controls" type="Label" parent="."]
offset_left = 810.0
offset_top = 800.0
offset_right = 1111.0
offset_bottom = 890.0
theme_override_colors/font_color = Color(0, 0.313726, 1, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_4pn3y")
theme_override_font_sizes/font_size = 48
text = "P2 CONTROLS:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Text" type="Label" parent="P2Controls"]
offset_top = 90.0
offset_right = 301.0
offset_bottom = 186.0
theme_override_colors/font_color = Color(0.784314, 0.784314, 0.784314, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_4pn3y")
theme_override_font_sizes/font_size = 24
text = "Arrow keys/IJKL - Movement
NM/<> - Rotate turret
Space bar - Fire"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P1Label" type="Label" parent="."]
offset_left = 275.0
offset_top = 600.0
offset_right = 326.0
offset_bottom = 660.0
theme_override_colors/font_color = Color(0.784314, 0.784314, 0.784314, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_4pn3y")
theme_override_font_sizes/font_size = 48
text = "P1"
horizontal_alignment = 1
vertical_alignment = 1

[node name="P2Label" type="Label" parent="."]
offset_left = 1594.0
offset_top = 600.0
offset_right = 1645.0
offset_bottom = 660.0
theme_override_colors/font_color = Color(0.784314, 0.784314, 0.784314, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 5
theme_override_fonts/font = ExtResource("3_4pn3y")
theme_override_font_sizes/font_size = 48
text = "P2"
horizontal_alignment = 1
vertical_alignment = 1
